--- a/triangleArea/8-4.html
+++ b/triangleArea/8-4.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset='utf-8'>
+        <title>Zadanie 8-4</title>
 	</head>
 	<body>
 		<script type="text/javascript" src="8-4.js"></script>
