--- a/zadanie_8_11/8-11.html
+++ b/zadanie_8_11/8-11.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<title>Zadanie 8-11</title>
 		<meta charset='utf-8'>
 	</head>
 	<body>
-		<ul id="Lista"> 
+		<ul id="lista"> 
 			<li>item 0</li> 
 		</ul> 
 		<button id="addElem">
